--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,11 @@
 </head>
 <body>
 
-  <div class="container">
   <%= render 'layouts/header' %>
+  <div class="container">
+  	<% flash.each do |name, msg| %>
+     <%= content_tag(:div, msg, class: "alert alert-#{name}") %>
+		<% end %>
      <%= yield %>
   </div>
 
