--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -6,7 +6,7 @@
       <%= link_to image_tag(pin.image.url(:medium)), pin_path(pin) %>
     <div class="panel-body center">
       <p><%= pin.description %><p/>
-      <p><strong><%= pin.user.email if pin.user %></strong></p>
+      <p><strong><%= pin.user.name if pin.user %></strong></p>
 
         <% if pin.user == current_user %>
           <div class="actions">
