--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -8,7 +8,7 @@
       </div>
       <div class="panel-body center">
         <p><%= @pin.description %></p>
-        <p><strong><%= @pin.user.email if @pin.user %></strong></p>
+        <p><strong><%= @pin.user.name if @pin.user %></strong></p>
 
         <% if @pin.user == current_user %>
          <%= link_to edit_pin_path(@pin) do %>
