--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,6 @@
-<h1>About US</h1>
-<p>We are working on our One Month Rails Pinteresting app</p>
+<div class="container">
+	<div class="jumbotron">
+		<center><h1>About</h1>
+			<p>This is a test clone of Pinterest</p></center>
+	</div>
+</div>
