Edited About page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="jumbotron">
 		<center><h1>About</h1>
-			<p>This is a test clone of Pinterest</p></center>
+			<p>This is a fully functional Pinterest clone</p></center>
 	</div>
 </div>
